# statCraft

./: .gitignore  LICENSE  MANIFEST.in  README.md  REGRESSORS_GUIDE.md  pyproject.toml
examples/: config_glm.yaml  config_one_sample.yaml  config_paired.yaml  config_paired_by_session.yaml  config_two_sample.yaml
src/statcraft/: __init__.py  cli.py  config.py  pipeline.py
src/statcraft/core/: __init__.py  annotation.py  data_loader.py  design_matrix.py  glm.py  inference.py  report.py
src/statcraft/templates/: report.html
tests/: __init__.py  conftest.py  test_config.py  test_design_matrix.py  test_glm.py  test_inference.py  test_integration.py
